samples/_failures_safe/1761546163_2ada67_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3ef49757.c: In function ‘main’:
./samples/SAFE/__tmp_3ef49757.c:158:12: error: missing terminating " character
  158 |     printf("Compression ratio: %.2f
      |            ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_3ef49757.c:158:5: error: expected expression at end of input
  158 |     printf("Compression ratio: %.2f
      |     ^~~~~~
./samples/SAFE/__tmp_3ef49757.c:158:5: error: expected declaration or statement at end of input
